<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/fd_preference_screen">

    <SwitchPreference
        android:key="@string/preference_fd_legacy_camera"
        android:title="@string/preference_fd_legacy_camera_title"
        android:summary="@string/preference_fd_legacy_camera_summary"
        android:defaultValue="false" />
    <ListPreference
        android:defaultValue="socket"
        android:entries="@array/pref_latency_test_method_titles"
        android:entryValues="@array/pref_latency_test_method_values"
        android:key="@string/fd_latency_method"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary="@string/pref_summary_latency_method"
        android:title="@string/pref_title_latency_method" />
    <SwitchPreference
        android:key="@string/preference_fd_multi_face"
        android:title="@string/preference_fd_multi_face_title"
        android:summary="@string/preference_fd_multi_face_summary"
        android:defaultValue="true" />
    <SwitchPreference
        android:key="@string/preference_fd_local_proc"
        android:title="@string/preference_fd_local_proc_title"
        android:summary="@string/preference_fd_local_proc_summary"
        android:defaultValue="true" />
    <SwitchPreference
        android:key="@string/preference_fd_show_full_latency"
        android:title="@string/preference_fd_show_full_latency_title"
        android:summary="@string/preference_fd_show_full_latency_summary"
        android:defaultValue="true" />
    <SwitchPreference
        android:key="@string/preference_fd_show_net_latency"
        android:title="@string/preference_fd_show_net_latency_title"
        android:summary="@string/preference_fd_show_net_latency_summary"
        android:defaultValue="true" />
    <SwitchPreference
        android:key="@string/preference_fd_show_stddev"
        android:title="@string/preference_fd_show_stddev_title"
        android:summary="@string/preference_fd_show_stddev_summary"
        android:defaultValue="false" />
    <SwitchPreference
        android:key="@string/preference_fd_use_rolling_avg"
        android:title="@string/preference_fd_use_rolling_avg_title"
        android:summary="@string/preference_fd_use_rolling_avg_summary"
        android:defaultValue="false" />
    <ListPreference
        android:defaultValue="invalid"
        android:entries="@array/pref_fd_reset_both_hosts_choices"
        android:entryValues="@array/pref_fd_reset_both_hosts_choices"
        android:key="@string/preference_fd_reset_both_hosts"
        android:title="@string/preference_fd_reset_both_hosts_title" />
    <EditTextPreference
        android:defaultValue="facedetection.defaultcloud.mobiledgex.net"
        android:key="@string/preference_fd_host_cloud"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        android:summary="@string/preference_fd_host_cloud_summary"
        android:title="@string/preference_fd_host_cloud_title" />
    <EditTextPreference
        android:defaultValue="facedetection.defaultedge.mobiledgex.net"
        android:key="@string/preference_fd_host_edge"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        android:summary="@string/preference_fd_host_edge_summary"
        android:title="@string/preference_fd_host_edge_title" />
    <SwitchPreference
        android:key="@string/preference_fd_show_latency_stats_dialog"
        android:title="@string/preference_fd_show_latency_stats_dialog_title"
        android:summary="@string/preference_fd_show_latency_stats_dialog_summary"
        android:defaultValue="false" />

</PreferenceScreen>